--- a/Creative/index.html
+++ b/Creative/index.html
@@ -28,16 +28,16 @@
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628">
   <meta property="og:description" content="Roud Studio is creative agency that make 100% irreproachable digital products that bring changes in future minds. Our main mission is to connect design, technologies and brilliant ideas together.">
-  <meta property="og:title" content="Roud Studio | Digital Experience, Branding, eCommerce">
+  <meta property="og:title" content="Arun Prasad | Ezio">
 
   <meta property="twitter:card" content="summary" />
-  <meta property="twitter:title" content="Roud Studio | Digital Experience, Branding, eCommerce" />
+  <meta property="twitter:title" content="Arun Prasad | Ezio" />
   <meta property="twitter:description" content="Roud Studio is creative agency that make 100% irreproachable digital products that bring changes in future minds. Our main mission is to connect design, technologies and brilliant ideas together." />
   <meta property="twitter:image" content="/og-image.jpg">
 
       <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
-  <title>Roud Studio | Digital Experience, Branding, eCommerce</title>
+  <title>Arun Prasad | Ezio</title>
       <meta name="description" content="Roud Studio is creative agency that make 100% irreproachable digital products that bring changes in future minds. Our main mission is to connect design, technologies and brilliant ideas together." />
     <link href="https://www.roudstudio.com/css/styles.css?2" rel="stylesheet">
   <script>
