Revert "website edited"
This reverts commit 68bfd11528f17bae5edcc9c8b4d46b2985456939.

--- a/www.roudstudio.com/index - Copy.html
+++ b/www.roudstudio.com/index - Copy.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
-  <link rel="preload" href="https://Creative/fonts/kanit-v3-latin-300.woff2" as="font">
-  <link rel="preload" href="https://Creative/fonts/butler_light.woff2" as="font">
+  <link rel="preload" href="https://www.roudstudio.com/fonts/kanit-v3-latin-300.woff2" as="font">
+  <link rel="preload" href="https://www.roudstudio.com/fonts/butler_light.woff2" as="font">
   <script>
-    if (location.hostname === 'Creative' && navigator.userAgent.indexOf("Speed Insights") == -1) {
+    if (location.hostname === 'www.roudstudio.com' && navigator.userAgent.indexOf("Speed Insights") == -1) {
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -16,11 +16,11 @@
   </script>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="apple-touch-icon" sizes="180x180" href="https://Creative/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://Creative/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://Creative/favicon-16x16.png">
-  <link rel="manifest" href="https://Creative/site.webmanifest">
-  <link rel="mask-icon" href="https://Creative/safari-pinned-tab.svg" color="#0c111c">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://www.roudstudio.com/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://www.roudstudio.com/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://www.roudstudio.com/favicon-16x16.png">
+  <link rel="manifest" href="https://www.roudstudio.com/site.webmanifest">
+  <link rel="mask-icon" href="https://www.roudstudio.com/safari-pinned-tab.svg" color="#0c111c">
   <meta name="msapplication-TileColor" content="#0c111c">
   <meta name="theme-color" content="#0c111c">
 
@@ -28,18 +28,18 @@
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628">
   <meta property="og:description" content="Roud Studio is creative agency that make 100% irreproachable digital products that bring changes in future minds. Our main mission is to connect design, technologies and brilliant ideas together.">
-  <meta property="og:title" content="Arun Prasad | Ezio">
+  <meta property="og:title" content="Roud Studio | Digital Experience, Branding, eCommerce">
 
   <meta property="twitter:card" content="summary" />
-  <meta property="twitter:title" content="Arun Prasad | Ezio" />
+  <meta property="twitter:title" content="Roud Studio | Digital Experience, Branding, eCommerce" />
   <meta property="twitter:description" content="Roud Studio is creative agency that make 100% irreproachable digital products that bring changes in future minds. Our main mission is to connect design, technologies and brilliant ideas together." />
   <meta property="twitter:image" content="/og-image.jpg">
 
       <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
-  <title>Arun Prasad | Ezio</title>
+  <title>Roud Studio | Digital Experience, Branding, eCommerce</title>
       <meta name="description" content="Roud Studio is creative agency that make 100% irreproachable digital products that bring changes in future minds. Our main mission is to connect design, technologies and brilliant ideas together." />
-    <link href="https://Creative/css/styles.css?2" rel="stylesheet">
+    <link href="https://www.roudstudio.com/css/styles.css?2" rel="stylesheet">
   <script>
     var START = new Date();
     /*var FIRST_OPEN = !localStorage.getItem('openedBefore');
@@ -511,7 +511,7 @@
       <div class="item__content">
         <div class="item__bg" style="background: #0f0c1a"></div>
         <div class="item__img">
-          <div style="background-image: url('https://Creative/images/works/skilltwins.jpg');"></div>
+          <div style="background-image: url('https://www.roudstudio.com/images/works/skilltwins.jpg');"></div>
         </div>
         <div class="item__video">
           <video data-object-fit="cover" loop preload autoplay muted data-src="/videos/preview-skilltwins.mp4"></video>
@@ -527,7 +527,7 @@
       <div class="item__content">
         <div class="item__bg" style="background: #12324d"></div>
         <div class="item__img">
-          <div style="background-image: url('https://Creative/images/works/inleed.jpg');"></div>
+          <div style="background-image: url('https://www.roudstudio.com/images/works/inleed.jpg');"></div>
         </div>
         <div class="item__video">
           <video data-object-fit="cover" loop preload autoplay muted data-src="/videos/preview-inleed.mp4"></video>
@@ -544,7 +544,7 @@
       <div class="item__content">
         <div class="item__bg" style="background: #232323"></div>
         <div class="item__img">
-          <div style="background-image: url('https://Creative/images/works/rivercode.jpg');"></div>
+          <div style="background-image: url('https://www.roudstudio.com/images/works/rivercode.jpg');"></div>
         </div>
         <div class="item__video">
           <video data-object-fit="cover" loop preload autoplay muted data-src="/videos/preview-rivercode.mp4"></video>
@@ -640,42 +640,42 @@
   }, 10);
 </script>
 
-<script src="https://Creative/js/polyfills.js"></script>
-<script src="https://Creative/js/optimizedResize.js"></script>
-<script src="https://Creative/js/appearance.min.js"></script>
-<script src="https://Creative/js/anime.min.js"></script>
-<script src="https://Creative/js/component.js"></script>
-<script src="https://Creative/js/plugin.js"></script>
-<script src="https://Creative/js/nok.js"></script>
-<script src="https://Creative/js/jquery.min.js"></script>
-<script src="https://Creative/js/rellax.min.js"></script>
-<script src="https://Creative/js/isotope.pkgd.min.js"></script>
-<script src="https://Creative/js/slick.min.js"></script>
+<script src="https://www.roudstudio.com/js/polyfills.js"></script>
+<script src="https://www.roudstudio.com/js/optimizedResize.js"></script>
+<script src="https://www.roudstudio.com/js/appearance.min.js"></script>
+<script src="https://www.roudstudio.com/js/anime.min.js"></script>
+<script src="https://www.roudstudio.com/js/component.js"></script>
+<script src="https://www.roudstudio.com/js/plugin.js"></script>
+<script src="https://www.roudstudio.com/js/nok.js"></script>
+<script src="https://www.roudstudio.com/js/jquery.min.js"></script>
+<script src="https://www.roudstudio.com/js/rellax.min.js"></script>
+<script src="https://www.roudstudio.com/js/isotope.pkgd.min.js"></script>
+<script src="https://www.roudstudio.com/js/slick.min.js"></script>
 
-<script src="https://Creative/js/plugins/modal.js"></script>
-<script src="https://Creative/js/plugins/player.js"></script>
-<script src="https://Creative/js/plugins/scroll.js"></script>
-<script src="https://Creative/js/plugins/viewport.js"></script>
+<script src="https://www.roudstudio.com/js/plugins/modal.js"></script>
+<script src="https://www.roudstudio.com/js/plugins/player.js"></script>
+<script src="https://www.roudstudio.com/js/plugins/scroll.js"></script>
+<script src="https://www.roudstudio.com/js/plugins/viewport.js"></script>
 
-<script src="https://Creative/js/components/header.js"></script>
-<script src="https://Creative/js/components/video.js"></script>
-<script src="https://Creative/js/components/preview.js"></script>
-<script src="https://Creative/js/components/wedo.js"></script>
-<script src="https://Creative/js/components/compare.js"></script>
-<script src="https://Creative/js/components/rellax.js"></script>
-<script src="https://Creative/js/components/appearance.js"></script>
-<script src="https://Creative/js/components/brands.js"></script>
-<script src="https://Creative/js/components/bg-block.js"></script>
-<script src="https://Creative/js/components/email.js"></script>
-<script src="https://Creative/js/components/phones.js"></script>
-<script src="https://Creative/js/components/to-top.js"></script>
-<script src="https://Creative/js/components/vimeo.js"></script>
-<script src="https://Creative/js/components/changing.js"></script>
+<script src="https://www.roudstudio.com/js/components/header.js"></script>
+<script src="https://www.roudstudio.com/js/components/video.js"></script>
+<script src="https://www.roudstudio.com/js/components/preview.js"></script>
+<script src="https://www.roudstudio.com/js/components/wedo.js"></script>
+<script src="https://www.roudstudio.com/js/components/compare.js"></script>
+<script src="https://www.roudstudio.com/js/components/rellax.js"></script>
+<script src="https://www.roudstudio.com/js/components/appearance.js"></script>
+<script src="https://www.roudstudio.com/js/components/brands.js"></script>
+<script src="https://www.roudstudio.com/js/components/bg-block.js"></script>
+<script src="https://www.roudstudio.com/js/components/email.js"></script>
+<script src="https://www.roudstudio.com/js/components/phones.js"></script>
+<script src="https://www.roudstudio.com/js/components/to-top.js"></script>
+<script src="https://www.roudstudio.com/js/components/vimeo.js"></script>
+<script src="https://www.roudstudio.com/js/components/changing.js"></script>
 
-<script src="https://Creative/js/scroll-control.js"></script>
-<script src="https://Creative/js/barba.min.js"></script>
-<script src="https://Creative/js/fix-mobile-vh.js"></script>
-<script src="https://Creative/js/scripts.js"></script>
+<script src="https://www.roudstudio.com/js/scroll-control.js"></script>
+<script src="https://www.roudstudio.com/js/barba.min.js"></script>
+<script src="https://www.roudstudio.com/js/fix-mobile-vh.js"></script>
+<script src="https://www.roudstudio.com/js/scripts.js"></script>
 
 </body>
 </html>
