--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
-  <title>Roud Studio | Digital Experience, Branding, eCommerce</title>
+  <title>Arun Prasad</title>
       <meta name="description" content="Roud Studio is creative agency that make 100% irreproachable digital products that bring changes in future minds. Our main mission is to connect design, technologies and brilliant ideas together." />
     <link href="https://www.roudstudio.com/css/styles.css?2" rel="stylesheet">
   <script>
