--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628">
   <meta property="og:description" content="Roud Studio is creative agency that make 100% irreproachable digital products that bring changes in future minds. Our main mission is to connect design, technologies and brilliant ideas together.">
-  <meta property="og:title" content="Roud Studio | Digital Experience, Branding, eCommerce">
+  <meta property="og:title" content="Arun Prasad">
 
   <meta property="twitter:card" content="summary" />
-  <meta property="twitter:title" content="Roud Studio | Digital Experience, Branding, eCommerce" />
+  <meta property="twitter:title" content="Arun Prasad" />
   <meta property="twitter:description" content="Roud Studio is creative agency that make 100% irreproachable digital products that bring changes in future minds. Our main mission is to connect design, technologies and brilliant ideas together." />
   <meta property="twitter:image" content="/og-image.jpg">
 
